--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,18 +1,34 @@
-<!doctype = html>
-
+<!doctype html>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <html>
+    <head>
+        <title>My First Web App</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    </head>
 
-  <head>
-    <link rel="stylesheet" type="text/css" href="../static/main.css">
-    <title>My Flask App Page</title>
-  </head>
+    <body>
 
-  <body>
-    {% if name %}
-      <p>Hello {{name}}!</p>
-    {% else %}
-      <p>Hello anonymous person </p>
-    {% endif %}
-  </body>
-  
+            {% if message %}
+
+                <p> <h2> Hello {{message}}! </h2></p>
+
+            {% else %}
+
+            <p>Hello - No Message!</p>
+
+            {% endif %}
+
+        <div class="home">
+            <h2 class="logo">Example 1: To post data  to the backend</h1>
+
+            <div id="contact-form" >
+                <form method="post" action="/gen">
+                    <label for="text">Please Enter Year of your brith</label>
+                    <input type="text" id="dob" name="dob" required="required">
+                    <input type="submit" value="Submit" id="submit"/>
+                </form>
+            </div>
+        </div>
+
+    </body>
 </html>
