Adding generation calculation to pick up value entered on the form.

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -22,8 +22,8 @@
             <h2 class="logo">Example 1: To post data  to the backend</h1>
 
             <div id="contact-form" >
-                <form method="post" action="/gen">
-                    <label for="text">Please Enter Year of your brith</label>
+                <form method="post" action="/yourgeneration">
+                    <label for="text">Please Enter your Year of Birth</label>
                     <input type="text" id="dob" name="dob" required="required">
                     <input type="submit" value="Submit" id="submit"/>
                 </form>
