Add horoscope functionality

--- a/flask_app/templates/horoscope.html
+++ b/flask_app/templates/horoscope.html
@@ -10,9 +10,9 @@
 
 
         <div class="home">
-          {% if gen %}
+          {% if data %}
 
-              <p> <h2> You were born in {{year}} and so you are part of {{gen}}! </h2></p>
+              <p> <h2> You were born on day {{day}} in month {{month}} and your horoscope is {{data}} </h2></p>
 
           {% else %}
 
