--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -24,7 +24,16 @@
             <div id="contact-form" >
                 <form method="post" action="/yourgeneration">
                     <label for="text">Please Enter your Year of Birth</label>
-                    <input type="text" id="dob" name="dob" required="required">
+                    <input type="text" id="year" name="year" required="required">
+                    <input type="submit" value="Submit" id="submit"/>
+                </form>
+            </div>
+            <div id="contact-form-2" >
+                <form method="post" action="/horoscope">
+                    <label for="text">Please Enter your Day of Birth</label>
+                    <input type="text" id="day" name="day" required="required">
+                    <label for="text">Please Enter your Month of Birth</label>
+                    <input type="text" id="month" name="month" required="required">
                     <input type="submit" value="Submit" id="submit"/>
                 </form>
             </div>
