--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ body {
 
 div.home {
   padding: 10px 0 30px 0;
+  text-align: center;
   background-color: #E6E6FA;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
